--- a/css/custom.css
+++ b/css/custom.css
@@ -63,8 +63,9 @@ h2 {
 .navbar a {
     color: #00ff84!important;
     font-family: 'BebasNeue';
-    font-size: 1.1em;
-    letter-spacing: 2px;
+    font-size: 1.5em;
+    letter-spacing: .2em;
+
 }
 
 .navbar a:hover {
@@ -157,13 +158,14 @@ h2 {
     font-size: 1.5em;
     letter-spacing: 0.4em;
 }
-
+.Bloque04 {
+    background: url(../img/back.jpg) no-repeat bottom #fff; 
+}
 
 
 .Bloque05 {
     background: #141414;
-    color: white;
-    
+    color: white;   
 }
 
 .Bloque05 p {
@@ -196,9 +198,15 @@ h2 {
     bottom: 0;
     left: 0;
     margin: auto!important;
-    height: 100px;
-    width: 100px;
+    height: 100%;
+
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
 }
+
+
 
 .rombo {
     width: 100px; 
